feat: jots/tasks to client
