# server/utils/utils.go
@@ -4,6 +4,7 @@ import (
 	"encoding/json"
 	"fmt"
 	"net/http"
+	"time"
 
 	"github.com/go-playground/validator/v10"
 )
@@ -25,4 +26,16 @@ func WriteJSON(w http.ResponseWriter, status int, v any) error {
 
 func WriteError(w http.ResponseWriter, status int, err error) {
 	WriteJSON(w, status, map[string]string{"error": err.Error()})
+}
+
+func DaysIn(month int, year int) int {
+	if month == 12 {
+		return time.Date(year+1, 1, 0, 0, 0, 0, 0, time.UTC).Day()
+	}
+	return time.Date(year, time.Month(month+1), 0, 0, 0, 0, 0, time.UTC).Day()
+}
+
+func Dump(data any) {
+	b, _ := json.MarshalIndent(data, "", "  ")
+	fmt.Print(string(b) + "\n")
 }
